Closed Bug 1254103 Opened 10 years ago Closed 10 years ago

Window.open() should not reuse an existing window if it's running a different container

Categories

(Core :: DOM: Core & HTML, defect)

47 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox47 --- affected
firefox48 --- fixed

People

(Reporter: baku, Assigned: baku)

References

(Blocks 1 open bug)

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1253538 +++ We must do something similar to bug 1253538 for mAddonId and mSignedPkg.
Attached patch fix2.patchSplinter Review
Attachment #8727388 - Flags: review?(bzbarsky)
Comment on attachment 8727388 [details] [diff] [review] fix2.patch r=me, again assuming that we don't want chrome callers to be able to bypass this restriction.
Attachment #8727388 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: