Bug 1254103 - Window.open() should not reuse an existing window if it's running a different container, r=bz